# Nethive-Project

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile.save  README.md  documentation.txt  how-to_plugin_for_dvwa.txt  install.sh  main.py  main.sh  queue_for_installer.txt  references.txt  requirements.txt  utils.py  xss_audit_log.db
activators/: __init__.py  activate.py  audit.rules  depman.sh  elkstack.sh  main.sh  php_plugin.sh  php_plugins.sh  slog.sql
dashboard/: !!ReadMe  .env  app.js  package-lock.json  package.json
doc/: user_guide.md  user_guide.md.md
models/: sqli.pkl  sqli_cols.pkl
observers/: __init__.py  depr_of_sql_connection.py  sql_connection.py  sql_response.py  sql_response_observer.py
parsers/: Slog.py  __init__.py  auditparser.py  bash_parser.py  depr_packetbeat_parser.py  deprecated_sql_response_interceptor.py  exceptions.py  historyparser.py  packetbeat_receiver.py  packetbeat_receptor.py  slog.py  slog_parser.py  slogparser.py  sql_interceptor.py
processors/: __init__.py  audit_control.py  correlate.py  depr_data_correlator.py  inspection_controller.py  sql_inspector.py  sql_interceptor.py.tcpbased  sql_response_inspector.py  sql_tokenizer.py  xss_audit_control.py  xss_watcher.py
serviceguards/: __init__.py  beatsforwarder.py  elkstack.py  httpsniffer.py  inspectioncontroller.py  (+5 more)
threlk_engine/: ._bashmon.py.swp  Cargo.toml  __init__.py  _auditbeat.py  _auditmon.py  _bashmon.py  _cvssapi.py  _httpmon.py  auditbeat.py  engine.py  engine.py.bak  historian.py  main.py  pump.py
threlk_engine/src/: es.rs  main.rs  processor.rs
(+74 files in other folders)
