[package]
name = "threlk_engine"
version = "0.1.0"
authors = ["mrcoffee <mrCoff3e@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
serde = ""
serde_json = "1"
serde_derive = ""
base64 = "0.11.0"
kafka = "0.8.0"
threadpool = ""
env_logger = ""
log = ""